--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -16,7 +16,7 @@
         <ul class="site-navigation">
           <li class="site-navigation-menu">
             <a class="selected" href="#">Каталог</a>
-            <ul class="submenu visually-hidden">
+            <ul class="submenu">
               <li>
                 <a class="special" href="#">Новинки</a>
               </li>
@@ -31,50 +31,50 @@
         </ul>
         <ul class="user-navigation">
           <li class="search">
-            <button class="button search-button" aria-label="Поиск"><img src="img/search.svg" alt="search icon"></button>
-            <form class="form search-form visually-hidden" action="https://echo.htmlacademy.ru" method="get">
+            <button class="button search-button" aria-label="Поиск">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 17 17" enable-background="new 0 0 17 17" xml:space="preserve">
+                  <path fill="#FFFFFF" d="M16.958,15.527L11.75,10.32C12.533,9.247,13,7.93,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5 S2.91,13,6.5,13c1.438,0,2.763-0.473,3.839-1.263l5.205,5.204L16.958,15.527z M6.5,11C4.019,11,2,8.981,2,6.5S4.019,2,6.5,2 S11,4.019,11,6.5S8.981,11,6.5,11z"/>
+                </svg>
+            </button>
+            <form class="form search-form" action="https://echo.htmlacademy.ru" method="get">
               <label class="visually-hidden" for="search">Поиск</label>
               <input type="search" name="search_line" id="search" placeholder="Что ищем?">
             </form>
           </li>
           <li class="login">
             <a class="button login-button" href="#">Вход</a>  
-            <form class="form login-form visually-hidden" action="https://echo.htmlacademy.ru" method="post">
-              <p>
-                <label class="visually-hidden" for="email">Электронная почта</label>
-                <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
-              </p>
-              <p>
-                <label class="visually-hidden" for="password">Пароль</label>
-                <input type="password" name="password_line" id="password" placeholder="Пароль" required>
-              </p>
-              <p>
-                <a href="#">Забыли пароль?</a>
-                <a href="#">Новая регистрация</a>
-              </p>
-              <p>
-                <button class="button" type="submit">Войти</button>
-              </p>
-            </form>
+              <form class="form login-form" action="https://echo.htmlacademy.ru" method="post">
+                  <label class="visually-hidden" for="email">Электронная почта</label>
+                  <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
+                  <label class="visually-hidden" for="password">Пароль</label>
+                  <input type="password" name="password_line" id="password" placeholder="Пароль" required>
+                  <div class="login-flex">
+                    <div class="login-flex-inner">
+                      <a href="#">Забыли пароль?</a>
+                      <a href="#">Новая регистрация</a>
+                    </div>
+                    <button class="button" type="submit">Войти </button>
+                  </div>
+              </form>
           </li>
           <li class="cart">
             <a class="button cart-button cart-filled" href="#">2 товара</a>
 
-            <div class="cart-list visually-hidden">
+            <div class="cart-list">
               <table>
                 <tr>
-                  <td><button class="item-remove" type="button">Удалить</button></td>
-                  <td><img src="img/item_icons/1.jpg" width="33" height="33" alt="Иконка товара"></td>
-                  <td>Пломбир с апельсиновым джемом</td>
-                  <td>1,5 кг х <span class="cart-price">200 руб.</span></td>
-                  <td>300 руб.</td>
+                  <td class="cart-remove"><button class="item-remove" type="button">Удалить</button></td>
+                  <td class="cart-icon"><img src="img/item_icons/1.png" width="33" height="33" alt="Иконка товара"></td>
+                  <td class="cart-item">Пломбир с апельсиновым джемом</td>
+                  <td class="cart-cost">1,5 кг х <span class="cart-price">200 руб.</span></td>
+                  <td class="cart-total">300 руб.</td>
                 </tr>
                 <tr>
-                  <td><button class="item-remove" type="button">Удалить</button></td>
-                  <td><img src="img/item_icons/3.jpg" width="33" height="33" alt="Иконка товара"></td>
-                  <td>Клубничный пломбир с присыпкой из белого шоколада</td>
-                  <td>1,5 кг х <span class="cart-price">300 руб.</span></td>
-                  <td>450 руб.</td>
+                  <td class="cart-remove"><button class="item-remove" type="button">Удалить</button></td>
+                  <td class="cart-icon"><img src="img/item_icons/3.png" width="33" height="33" alt="Иконка товара"></td>
+                  <td class="cart-item">Клубничный пломбир с присыпкой из белого шоколада</td>
+                  <td class="cart-cost">1,5 кг х <span class="cart-price">300 руб.</span></td>
+                  <td class="cart-total">450 руб.</td>
                 </tr>
               </table>
               <p><b>Итого: 750 руб.</b></p>
@@ -133,17 +133,41 @@
             <fieldset class="filter-fat">
               <legend class="filter-title">Жирность:</legend>
               <div class="filter-section">
-                <label>
-                 <input type="radio" name="fat" value="0">0%
+                <label class="filter-radio">
+                  <input class="visually-hidden" type="radio" name="fat" value="0">
+                  <span class="radio-indicator">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 25 25" enable-background="new 0 0 25 25" xml:space="preserve">
+                      <path d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0 C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" fill="white"/>
+                    </svg>
+                  </span>
+                 0%
                </label>
-               <label>
-                <input type="radio" name="fat" value="10" checked>до 10%
+               <label class="filter-radio">
+                <input class="visually-hidden" type="radio" name="fat" value="10" checked>
+                <span class="radio-indicator">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 25 25" enable-background="new 0 0 25 25" xml:space="preserve">
+                      <path d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0 C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" fill="white"/>
+                    </svg>
+                </span>
+                до 10%
                </label>
-                <label>
-               <input type="radio" name="fat" value="30">до 30%
+                <label class="filter-radio">
+               <input class="visually-hidden" type="radio" name="fat" value="30">
+               <span class="radio-indicator">
+                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 25 25" enable-background="new 0 0 25 25" xml:space="preserve">
+                      <path d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0 C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" fill="white"/>
+                    </svg>
+               </span>
+               до 30%
                </label>
-               <label>
-                 <input type="radio" name="fat" value=">30">выше 30%
+               <label class="filter-radio">
+                 <input class="visually-hidden" type="radio" name="fat" value=">30">
+                 <span class="radio-indicator">
+                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 25 25" enable-background="new 0 0 25 25" xml:space="preserve">
+                      <path d="M12.5,4c4.687,0,8.5,3.813,8.5,8.5c0,4.687-3.813,8.5-8.5,8.5C7.813,21,4,17.187,4,12.5C4,7.813,7.813,4,12.5,4 M12.5,0 C5.597,0,0,5.597,0,12.5S5.597,25,12.5,25S25,19.403,25,12.5S19.403,0,12.5,0L12.5,0z" fill="white"/>
+                    </svg>
+                 </span>
+                 выше 30%
                </label>
              </div>
             </fieldset>
@@ -151,20 +175,50 @@
             <fieldset class="filter-fill">
               <legend class="filter-title">Наполнители:</legend>
               <div class="filter-section">
-               <label>
-                  <input type="checkbox" name="fill" value="chocolate" checked>шоколадные
+               <label class="filter-checkbox">
+                  <input class="visually-hidden" type="checkbox" name="fill" value="chocolate" checked>
+                  <span class="checkbox-indicator">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"y="0px" width="23px" height="23px" viewBox="0 0 23 23" enable-background="new 0 0 23 23" xml:space="preserve">
+                      <path d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3 C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" fill="white"/>
+                    </svg>
+                  </span>
+                  шоколадные
                 </label>
-                <label>
-                 <input type="checkbox" name="fill" value="sugar" checked>сахарные присыпки
+                <label class="filter-checkbox">
+                 <input class="visually-hidden" type="checkbox" name="fill" value="sugar" checked>
+                 <span class="checkbox-indicator">
+                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"y="0px" width="23px" height="23px" viewBox="0 0 23 23" enable-background="new 0 0 23 23" xml:space="preserve">
+                      <path d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3 C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" fill="white"/>
+                    </svg>
+                 </span>
+                 сахарные присыпки
                </label>
-                <label>
-                  <input type="checkbox" name="fill" value="fruits">фрукты
+                <label class="filter-checkbox">
+                  <input class="visually-hidden" type="checkbox" name="fill" value="fruits">
+                  <span class="checkbox-indicator">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"y="0px" width="23px" height="23px" viewBox="0 0 23 23" enable-background="new 0 0 23 23" xml:space="preserve">
+                      <path d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3 C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" fill="white"/>
+                    </svg>
+                  </span>
+                  фрукты
                 </label>
-                <label>
-                  <input type="checkbox" name="fill" value="surup">сиропы
+                <label class="filter-checkbox">
+                  <input class="visually-hidden" type="checkbox" name="fill" value="surup">
+                  <span class="checkbox-indicator">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"y="0px" width="23px" height="23px" viewBox="0 0 23 23" enable-background="new 0 0 23 23" xml:space="preserve">
+                      <path d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3 C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" fill="white"/>
+                    </svg>
+                  </span>
+                  сиропы
                 </label>
-                <label>
-                 <input type="checkbox" name="fill" value="jam">джемы
+                <label class="filter-checkbox">
+                 <input class="visually-hidden" type="checkbox" name="fill" value="jam">
+                 <span class="checkbox-indicator">
+                   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"y="0px" width="23px" height="23px" viewBox="0 0 23 23" enable-background="new 0 0 23 23" xml:space="preserve">
+                      <path d="M20,2c0.542,0,1,0.458,1,1v17c0,0.542-0.458,1-1,1H3c-0.542,0-1-0.458-1-1V3c0-0.542,0.458-1,1-1H20 M20,0H3 C1.35,0,0,1.35,0,3v17c0,1.65,1.35,3,3,3h17c1.65,0,3-1.35,3-3V3C23,1.35,21.65,0,20,0L20,0z" fill="white"/>
+                    </svg>
+                 </span>
+                 джемы
                 </label>
               </div>
             </fieldset>
