--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   			  <ul class="site-navigation">
   				  <li class="site-navigation-menu">
   				  	<a href="#">Каталог</a>
-  				  	<ul class="submenu visually-hidden">
+  				  	<ul class="submenu">
   					 	  <li>
   							  <a class="special" href="#">Новинки</a>
   						  </li>
@@ -31,30 +31,30 @@
   			  </ul>
   			  <ul class="user-navigation">
             <li class="search">
-              <button class="button search-button" aria-label="Поиск"><img src="img/search.svg" alt="search icon"></button>
-              <form class="form search-form visually-hidden" action="https://echo.htmlacademy.ru" method="get">
+              <button class="button search-button" aria-label="Поиск">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 17 17" enable-background="new 0 0 17 17" xml:space="preserve">
+                  <path fill="#FFFFFF" d="M16.958,15.527L11.75,10.32C12.533,9.247,13,7.93,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5 S2.91,13,6.5,13c1.438,0,2.763-0.473,3.839-1.263l5.205,5.204L16.958,15.527z M6.5,11C4.019,11,2,8.981,2,6.5S4.019,2,6.5,2 S11,4.019,11,6.5S8.981,11,6.5,11z"/>
+                </svg>
+              </button>
+              <form class="form search-form" action="https://echo.htmlacademy.ru" method="get">
               <label class="visually-hidden" for="search">Поиск</label>
               <input type="search" name="search_line" id="search" placeholder="Что ищем?">
               </form>
             </li>
   			  	<li class="login">
               <a class="button login-button" href="#">Вход</a>  
-              <form class="form login-form visually-hidden" action="https://echo.htmlacademy.ru" method="post">
-                <p>
+              <form class="form login-form" action="https://echo.htmlacademy.ru" method="post">
                   <label class="visually-hidden" for="email">Электронная почта</label>
                   <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
-                </p>
-                <p>
                   <label class="visually-hidden" for="password">Пароль</label>
                   <input type="password" name="password_line" id="password" placeholder="Пароль" required>
-                </p>
-                <p>
-                  <a href="#">Забыли пароль?</a>
-                  <a href="#">Новая регистрация</a>
-                </p>
-                <p>
-                  <button class="button" type="submit">Войти </button>
-                </p>
+                  <div class="login-flex">
+                    <div class="login-flex-inner">
+                      <a href="#">Забыли пароль?</a>
+                      <a href="#">Новая регистрация</a>
+                    </div>
+                    <button class="button" type="submit">Войти </button>
+                  </div>
               </form>
             </li>
   				  <li class="cart">
@@ -294,23 +294,15 @@
   		</div>
   	</footer>
 
-  	<section class="modal modal-feedback">
-  		<p><b>Мы обязательно вам ответим!</b></p>
+  	<section class="modal">
+  		<p class="modal-title"><b>Мы обязательно вам ответим!</b></p>
   		<form class="form feedback-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
           <label class="visually-hidden" for="name">Имя</label>
           <input type="text" name="name_line" id="name" placeholder="Как вас зовут?" required>
-        </p>
-        <p>
           <label class="visually-hidden" for="email_feedback">Электронная почта</label>
           <input type="email" name="email_line" id="email_feedback" placeholder="Ваша почта для ответа?" required>
-        </p>
-        <p>
           <textarea name="text" placeholder="Напишите что-нибудь..." required></textarea>
-        </p>
-        <p>
           <button class="button" type="submit">Отправить</button>
-        </p>
       </form>
   		<button class="modal-close" type="button">Закрыть</button>
   	</section>
