--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -238,7 +238,9 @@
               </div>
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -248,7 +250,9 @@
               </div>
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -258,7 +262,9 @@
               </div>
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           <li class="catalog-item">
             <a href="#">
               <div>
@@ -267,7 +273,9 @@
               </div>
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -277,7 +285,9 @@
               </div>
               <p>Сливочное с брусничным джемом</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -287,7 +297,9 @@
               </div>
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -297,7 +309,9 @@
               </div>
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -307,7 +321,9 @@
               </div>
               <p>Сливочное с шоколадной стружкой</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -317,7 +333,9 @@
               </div>
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -327,7 +345,9 @@
               </div>
               <p>Сливочное с ментоловым сиропом</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -337,7 +357,9 @@
               </div>
               <p>Сливочное с кусочками черного шоколада</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
           <li class="catalog-item">
             <a href="#">
@@ -347,7 +369,9 @@
               </div>
               <p>Сливочное с мятным сиропом</p>
             </a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
           </li>
         </ul>
       </section>
