--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -139,7 +141,9 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -150,7 +154,9 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -161,7 +167,9 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
-            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
+            <div class="catalog-flex">
+              <button class="button item-button" type="button">Быстрый просмотр</button>
+            </div>
   				</li>
   			</ul>
   		</section>
