--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   		</div>
   	</header>
     
-  	<main class="container">
+  	<main class="container main-container">
   		<h1 class="visually-hidden">Интернет-магазин мороженного Глейси</h1>
   		<section class="slider">
   			<h2 class="visually-hidden">Промо</h2>
