--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -91,7 +91,7 @@
       </div>
     </header>
 
-    <main class="container">
+    <main class="container main-container">
       
       <ul class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
@@ -112,6 +112,7 @@
                   <option value="expensive">сначала дорогие</option>
                   <option value="fat">по жирности</option>
                 </select>
+                <div class="filter-triangle"></div>
               </div>
             </fieldset>
 
@@ -479,9 +480,10 @@
       </nav>
 
       <div class="footer-copyright">
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg" width="128" height="39" alt="HTMLAcademy"></a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg" width="108" height="39" alt="HTMLAcademy"></a>
         <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
       </div>
+
     </footer>
   </body>
 </html>
