--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
   				</li>
@@ -141,7 +141,7 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
   				</li>
@@ -154,7 +154,7 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
   				</li>
@@ -167,7 +167,7 @@
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
   				</li>
@@ -220,7 +220,9 @@
           <div class="container map-adress-relative">
             <div class="map-adress">
               <p>
-                Адреса главного офиса и офлайн-магазина:<br>
+                Адрес главного офиса и офлайн-магазина:<br>
+              </p>
+              <p>
                 <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
               </p>
               <p class="map-adress-phone">
