--- a/catalog_cream.html
+++ b/catalog_cream.html
@@ -252,7 +252,7 @@
               </div>
               <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -264,7 +264,7 @@
               </div>
               <p>Сливочно-кофейное с кусочками шоколада</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -276,7 +276,7 @@
               </div>
               <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           <li class="catalog-item">
@@ -287,7 +287,7 @@
               </div>
               <p>Сливочное крем-брюле с карамельной подливкой</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -299,7 +299,7 @@
               </div>
               <p>Сливочное с брусничным джемом</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -311,7 +311,7 @@
               </div>
               <p>Сливочно-черничное с цельными ягодами черники</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -323,7 +323,7 @@
               </div>
               <p>Сливочно-лимонное с карамельной присыпкой</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -335,7 +335,7 @@
               </div>
               <p>Сливочное с шоколадной стружкой</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -347,7 +347,7 @@
               </div>
               <p>Сливочно-ванильное с кусочками шоколада</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -359,7 +359,7 @@
               </div>
               <p>Сливочное с ментоловым сиропом</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -371,7 +371,7 @@
               </div>
               <p>Сливочное с кусочками черного шоколада</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
@@ -383,7 +383,7 @@
               </div>
               <p>Сливочное с мятным сиропом</p>
             </a>
-            <div class="catalog-flex">
+            <div class="catalog-button-wrapper">
               <button class="button item-button" type="button">Быстрый просмотр</button>
             </div>
           </li>
