--- a/index.html
+++ b/index.html
@@ -11,57 +11,55 @@
   <body class="background background-1">
 
     <header class="container main-header">
-  	 <nav class="main-navigation">
+    	<nav class="main-navigation">
   			<a class="navigation-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
-  			  <ul class="site-navigation">
-  				  <li class="site-navigation-menu">
-  				  	<a href="#">Каталог</a>
-  				  	<ul class="submenu">
-  					 	  <li>
-  							  <a class="special" href="#">Новинки</a>
-  						  </li>
-  						  <li><a href="catalog_cream.html">Сливочное</a></li>
-  						  <li><a href="#">Щербеты</a></li>
-  						  <li><a href="#">Фруктовый лед</a></li>
-  						  <li><a href="#">Мелорин</a></li>
-  				  	</ul>
-  				  </li>
-  				  <li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
-  				  <li class="site-navigation-menu"><a href="#">О Компании</a></li>
-  			  </ul>
-  			  <ul class="user-navigation">
-            <li class="search">
-              <button class="button search-button" aria-label="Поиск">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 17 17" enable-background="new 0 0 17 17" xml:space="preserve">
-                  <path fill="#FFFFFF" d="M16.958,15.527L11.75,10.32C12.533,9.247,13,7.93,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5 S2.91,13,6.5,13c1.438,0,2.763-0.473,3.839-1.263l5.205,5.204L16.958,15.527z M6.5,11C4.019,11,2,8.981,2,6.5S4.019,2,6.5,2 S11,4.019,11,6.5S8.981,11,6.5,11z"/>
-                </svg>
-              </button>
-              <form class="form search-form" action="https://echo.htmlacademy.ru" method="get">
+			  <ul class="site-navigation">
+				  <li class="site-navigation-menu">
+				  	<a href="#">Каталог</a>
+				  	<ul class="submenu">
+					 	  <li><a class="special" href="#">Новинки</a></li>
+						  <li><a href="catalog_cream.html">Сливочное</a></li>
+						  <li><a href="#">Щербеты</a></li>
+						  <li><a href="#">Фруктовый лед</a></li>
+						  <li><a href="#">Мелорин</a></li>
+				  	</ul>
+				  </li>
+				  <li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
+				  <li class="site-navigation-menu"><a href="#">О Компании</a></li>
+			  </ul>
+			  <ul class="user-navigation">
+          <li class="search">
+            <button class="button search-button" aria-label="Поиск">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 17 17" enable-background="new 0 0 17 17" xml:space="preserve">
+                <path fill="#FFFFFF" d="M16.958,15.527L11.75,10.32C12.533,9.247,13,7.93,13,6.5C13,2.91,10.09,0,6.5,0S0,2.91,0,6.5 S2.91,13,6.5,13c1.438,0,2.763-0.473,3.839-1.263l5.205,5.204L16.958,15.527z M6.5,11C4.019,11,2,8.981,2,6.5S4.019,2,6.5,2 S11,4.019,11,6.5S8.981,11,6.5,11z"/>
+              </svg>
+            </button>
+            <form class="form search-form" action="https://echo.htmlacademy.ru" method="get">
               <label class="visually-hidden" for="search">Поиск</label>
               <input type="search" name="search_line" id="search" placeholder="Что ищем?">
-              </form>
-            </li>
-  			  	<li class="login">
-              <a class="button login-button" href="#">Вход</a>  
-              <form class="form login-form" action="https://echo.htmlacademy.ru" method="post">
-                  <label class="visually-hidden" for="email">Электронная почта</label>
-                  <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
-                  <label class="visually-hidden" for="password">Пароль</label>
-                  <input type="password" name="password_line" id="password" placeholder="Пароль" required>
-                  <div class="login-flex">
-                    <div class="login-flex-inner">
-                      <a href="#">Забыли пароль?</a>
-                      <a href="#">Новая регистрация</a>
-                    </div>
-                    <button class="button" type="submit">Войти </button>
-                  </div>
-              </form>
-            </li>
-  				  <li class="cart">
-              <a class="button cart-button" href="#">Пусто</a>
-            </li>
-  			  </ul>
-  	   	</nav>
+            </form>
+          </li>
+			  	<li class="login">
+            <a class="button login-button" href="#">Вход</a>  
+            <form class="form login-form" action="https://echo.htmlacademy.ru" method="post">
+              <label class="visually-hidden" for="email">Электронная почта</label>
+              <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
+              <label class="visually-hidden" for="password">Пароль</label>
+              <input type="password" name="password_line" id="password" placeholder="Пароль" required>
+              <div class="login-flex">
+                <div class="login-flex-inner">
+                  <a href="#">Забыли пароль?</a>
+                  <a href="#">Новая регистрация</a>
+                </div>
+                <button class="button" type="submit">Войти </button>
+              </div>
+            </form>
+          </li>
+				  <li class="cart">
+            <a class="button cart-button" href="#">Пусто</a>
+          </li>
+			  </ul>
+  	  </nav>
       
   		<div class="main-header-info">
   			  <span class="info-workinghour">С 10 до 20, ежедневно</span><br>
@@ -77,10 +75,10 @@
         <input class="slider-radio-2 visually-hidden" type="radio" id="btn-2" name="toggle">
         <input class="slider-radio-3 visually-hidden" type="radio" id="btn-3" name="toggle">
         <div class="slider-controls">
-            <label for="btn-1">Первый</label>
-            <label for="btn-2">Второй</label>
-            <label for="btn-3">Третий</label>
-          </div>
+          <label for="btn-1">Первый</label>
+          <label for="btn-2">Второй</label>
+          <label for="btn-3">Третий</label>
+        </div>
   			<ul class="slider-list">
   				<li class="slider-item slider-item-1">
             <img src="img/ice_cream_1.png" alt="Крем-брюле и пломбир">
@@ -194,47 +192,47 @@
       
       <div class="flex-main">
   		  <section class="news">
-  			 <h2 class="news-title">Новое в нашем блоге</h2>
-  			 <p class="news-text"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
+  			  <h2 class="news-title">Новое в нашем блоге</h2>
+  			  <p class="news-text"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
   		  </section>
 
   		  <section class="dispatch">
-  			 <h2 class="visually-hidden">Рассылка</h2>
-  			 <p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-  			 <form class="form dispatch-form" action="https://echo.htmlacademy.ru" method="post">
-              <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
-              <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
-             <button class="button" type="submit">Отправить</button>
-         </form>
+    			<h2 class="visually-hidden">Рассылка</h2>
+    			<p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+    			<form class="form dispatch-form" action="https://echo.htmlacademy.ru" method="post">
+            <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
+            <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
+            <button class="button" type="submit">Отправить</button>
+          </form>
   		  </section>
       </div>
   	</main>
 
     <section class="map">
-        <h2 class="visually-hidden">Карта и адрес</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="100%" height="429" allowfullscreen></iframe>
-        <p>
-          <img class="map-image" src="img/map.jpg" width="1250" height="640" alt="Главный офис и офлайн-магазин по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">   
-        </p>
-        <div class="map-adress-absolute">
-          <div class="container map-adress-relative">
-            <div class="map-adress">
-              <p>
-                Адрес главного офиса и офлайн-магазина:<br>
-              </p>
-              <p>
-                <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
-              </p>
-              <p class="map-adress-phone">
-                Для заказов по телефону:<br>
-                <span>8 812 450-25-25</span><br>
-                (с 10 до 20 ежедневно)
-              </p>
-              <a class="button" href="#">Форма обратной связи</a>
-            </div>
+      <h2 class="visually-hidden">Карта и адрес</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="100%" height="429" allowfullscreen></iframe>
+      <p>
+        <img class="map-image" src="img/map.jpg" width="1250" height="640" alt="Главный офис и офлайн-магазин по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">   
+      </p>
+      <div class="map-adress-absolute">
+        <div class="container map-adress-relative">
+          <div class="map-adress">
+            <p>
+              Адрес главного офиса и офлайн-магазина:<br>
+            </p>
+            <p>
+              <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+            </p>
+            <p class="map-adress-phone">
+              Для заказов по телефону:<br>
+              <span>8 812 450-25-25</span><br>
+              (с 10 до 20 ежедневно)
+            </p>
+            <a class="button" href="#">Форма обратной связи</a>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
   	<footer class="container main-footer">
   		<div class="footer-social">
@@ -308,12 +306,12 @@
   	<section class="modal">
   		<p class="modal-title"><b>Мы обязательно вам ответим!</b></p>
   		<form class="form feedback-form" action="https://echo.htmlacademy.ru" method="post">
-          <label class="visually-hidden" for="name">Имя</label>
-          <input type="text" name="name_line" id="name" placeholder="Как вас зовут?" required>
-          <label class="visually-hidden" for="email_feedback">Электронная почта</label>
-          <input type="email" name="email_line" id="email_feedback" placeholder="Ваша почта для ответа?" required>
-          <textarea name="text" placeholder="Напишите что-нибудь..." required></textarea>
-          <button class="button" type="submit">Отправить</button>
+        <label class="visually-hidden" for="name">Имя</label>
+        <input type="text" name="name_line" id="name" placeholder="Как вас зовут?" required>
+        <label class="visually-hidden" for="email_feedback">Электронная почта</label>
+        <input type="email" name="email_line" id="email_feedback" placeholder="Ваша почта для ответа?" required>
+        <textarea name="text" placeholder="Напишите что-нибудь..." required></textarea>
+        <button class="button" type="submit">Отправить</button>
       </form>
   		<button class="modal-close" type="button">Закрыть</button>
   	</section>
@@ -337,8 +335,6 @@
         popup.classList.remove("modal-show");
         overlay.classList.remove("overlay-show");
       });
-
-
 
       var background = document.querySelector(".background");
       var radio1 = document.querySelector(".slider-radio-1");
