--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
         </div>
   			<ul class="slider-list">
   				<li class="slider-item slider-item-1">
-            <img src="img/ice_cream_1.png" alt="Крем-брюле и пломбир">
+            <img src="img/ice_cream_1.png" width="647" height="584" alt="Крем-брюле и пломбир">
   					<p class="slider-description"><b>Крем-брюле и пломбир с малиновым джемом</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item slider-item-2 slider-hide">
-            <img src="img/ice_cream_2.png" alt="Шоколадный пломбир и сорбет">
+            <img src="img/ice_cream_2.png" width="644" height="582" alt="Шоколадный пломбир и сорбет">
   					<p class="slider-description"><b>Шоколадный пломбир и лимонный сорбет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item slider-item-3 slider-hide">
-            <img src="img/ice_cream_3.png" alt="Пломбир и клубничный сорбет">
+            <img src="img/ice_cream_3.png" width="639" height="582" alt="Пломбир и клубничный сорбет">
   					<p class="slider-description"><b>Пломбир с помадкой и клубничный щербет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
@@ -210,7 +210,7 @@
 
     <section class="map">
       <h2 class="visually-hidden">Карта и адрес</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="100%" height="429" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" height="429" allowfullscreen></iframe>
       <p>
         <img class="map-image" src="img/map.jpg" width="1250" height="640" alt="Главный офис и офлайн-магазин по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">   
       </p>
