--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   			</ul>
   		</section>
 
-  		<section class="catalog">
+  		<section class="catalog catalog-margin">
   			<h2 class="visually-hidden">Товары</h2>
   			<ul class="catalog-list">
   				<li class="catalog-item">
